<?xml version="1.0"?>
<package>
  <name>rtt_ros_kdl_tools</name>
  <version>3.0.0</version>
  <description>The rtt_ros_kdl_tools package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>trac_ik_lib</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
    </rtt_ros>
  </export>
</package>
